# stm32-without-cubeide

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  linker_script.ld  main.c  main.h  startup.c  stm32f410rb.cmake  stm32f4xx_hal_conf.h  syscalls.c  usart.c  usart.h
cmake/: stm32cubef4.cmake  stm32f410rb.cmake
core/: stm32f4xx_hal_msp.c  syscalls.c  system_stm32f4xx.c
